--- a/solidsweeper/index.html
+++ b/solidsweeper/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="./assets/favicon.0e726a38.ico" />
-    <title>Solid App</title>
+    <title>SolidDSweeper</title>
     <script type="module" crossorigin src="./assets/index.ca0ca59e.js"></script>
     <link rel="stylesheet" href="./assets/index.c0bd4e9e.css">
   </head>
